<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeFragment"
    android:background="@color/overlayGreyBG">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/custom_shape1"
                android:backgroundTint="@color/cloudWhite">

            </RelativeLayout>

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profil">

            </ImageView>

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/nama"
                style="@style/namaSaya">

            </TextView>

            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/roboto"
                android:text="@string/nim"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/deskripsi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nim"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="5dp"
                android:text="@string/deskripsi1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/deskripsi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deskripsi1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="5dp"
                android:text="@string/deskripsi2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/deskripsi3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deskripsi2"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="5dp"
                android:text="@string/deskripsi3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative1"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:text="@string/interest"
                style="@style/titleText">

            </TextView>

            <RelativeLayout
                android:id="@+id/relativePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/foto"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/photography"
                    app:shapeAppearanceOverlay="@style/roundImageCorner">

                </com.google.android.material.imageview.ShapeableImageView>

                <TextView
                    android:id="@+id/textFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/foto"
                    android:text="@string/photography"
                    style="@style/subTitleText">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeCoding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativePhoto"
                android:layout_marginTop="5dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/coding"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/coding"
                    app:shapeAppearanceOverlay="@style/roundImageCorner">

                </com.google.android.material.imageview.ShapeableImageView>

                <TextView
                    android:id="@+id/textCoding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toStartOf="@id/coding"
                    android:text="@string/coding"
                    style="@style/subTitleText">

                </TextView>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeGaming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeCoding"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/gaming"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gaming"
                    app:shapeAppearanceOverlay="@style/roundImageCorner">

                </com.google.android.material.imageview.ShapeableImageView>

                <TextView
                    android:id="@+id/textGaming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/gaming"
                    style="@style/subTitleText"
                    android:text="@string/gaming">

                </TextView>

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative3"
            android:padding="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:text="@string/makesMikes"
                style="@style/titleText">


            </TextView>

            <RelativeLayout
                android:id="@+id/relativeMakes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/makes"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sate"
                    app:shapeAppearanceOverlay="@style/roundImageCorner">

                </com.google.android.material.imageview.ShapeableImageView>

                <TextView
                    android:id="@+id/textMakes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/makes"
                    android:text="@string/sate"
                    style="@style/subTitleText">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeMikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/relativeMakes">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/mikes"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cola"
                    app:shapeAppearanceOverlay="@style/roundImageCorner"
                    android:layout_marginBottom="10dp">

                </com.google.android.material.imageview.ShapeableImageView>

                <TextView
                    android:id="@+id/textMikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/mikes"
                    android:text="@string/cola"
                    style="@style/subTitleText">

                </TextView>

            </RelativeLayout>



        </RelativeLayout>



    </RelativeLayout>

</ScrollView>