<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profileFragment"
    android:background="@color/overlayGreyBG">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20sp">

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/custom_shape1"
                android:backgroundTint="@color/cloudWhite">

            </RelativeLayout>

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profil">

            </ImageView>

            <TextView
                android:id="@+id/nama"
                style="@style/namaSaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/nama"
                android:textColor="@color/black">

            </TextView>

            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/roboto"
                android:text="@string/nim"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>


            <RelativeLayout
                android:id="@+id/relative3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative2"
                android:layout_marginTop="20sp"
                android:background="@drawable/custom_shape1"
                android:backgroundTint="@color/cloudWhite">

                <TextView
                    android:id="@+id/judulKontak"
                    style="@style/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20sp"
                    android:text="@string/kontak"
                    android:textColor="@color/black">

                </TextView>


                <LinearLayout
                    android:id="@+id/linearKontakAtas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/judulKontak"
                    android:padding="20dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <RelativeLayout
                            android:id="@+id/logoInstagram"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/instagram">

                            </ImageView>

                            <TextView
                                style="@style/contactContent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="50dp"
                                android:text="@string/unameInsta">

                            </TextView>

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <RelativeLayout
                            android:id="@+id/logoFacebook"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/fb_logo">

                            </ImageView>

                            <TextView
                                style="@style/contactContent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="50dp"
                                android:text="@string/fb">

                            </TextView>

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearKontakBawah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearKontakAtas"
                    android:layout_marginTop="-20dp"
                    android:padding="20dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <RelativeLayout
                            android:id="@+id/logoWhatsapp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/wa_logo">

                            </ImageView>

                            <TextView
                                style="@style/contactContent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="50dp"
                                android:text="@string/noWA">

                            </TextView>

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <RelativeLayout
                            android:id="@+id/logoTwitter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/twitter_logo">

                            </ImageView>

                            <TextView
                                style="@style/contactContent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="50dp"
                                android:text="@string/twitter">

                            </TextView>

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOCATION"
                style="@style/titleText"
                android:layout_below="@id/relative3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

            </TextView>

            <RelativeLayout
                android:id="@+id/relative4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginTop="20sp"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location">

                </ImageView>
            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>